--- a/src/components/AboutYou/MainAbY/MainAbY.css
+++ b/src/components/AboutYou/MainAbY/MainAbY.css
@@ -2,6 +2,8 @@
  * MainAbY css File
 */
 
-.MainAbY {
-    /* propertys here */
+#aboutYouForm {
+    height: 200px;
+    margin: 150px 0px 50px 0px;
+    font-family: ;
 }
