--- a/src/components/Activities/MainAct/MainAct.css
+++ b/src/components/Activities/MainAct/MainAct.css
@@ -1,35 +1,38 @@
 /*
  * MainAct css File
 */
-
-.formContainer {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    margin-top: -20px;
-}
-
 .checkboxInput {
-    display:none;
+    display: none;
+}
+.labelContainer{
+    margin:0;
+    width: 100%;
+
 }
 
-.formImage {
+.formActContainer {
+    margin-top: -20px;
+    display: flex;
+    flex-direction: row;
+    width: 100vw;
+    flex-wrap: wrap;
+}
+.rowContainer{
+    display:flex;
+    margin-right:10px;
+    padding:0;
+    width: 100vw;
+    height: 100%;
+}
+.formImage{
+    width: 5%;
     margin: 6px 18px 6px 18px;
     padding: 10px;
-    width: 14%;    
+    min-width: 75px;
     border: black solid 1px;
     border-radius: 20px;
- }
-/* .labelContainer {
-    margin: 0px;
-    padding: 10px;
-    height: 500px;
-    width: 100%;
-    display:flex;
-    flex-flow: column wrap;
-    justify-content: center;
-    text-align: center;
-    align-items: center;
-    border: orangered dotted 1px;
-
-} */
+ 
+}
+.formImage img{
+    width: 50%;
+}
