--- a/src/components/AppBehavior/MainAppBe/MainAppBe.css
+++ b/src/components/AppBehavior/MainAppBe/MainAppBe.css
@@ -7,7 +7,7 @@
 }
 .formContainer {
     height: 394px;
-    border: red dotted 1px;
+    /* border: red dotted 1px; */
     position: relative;
 }
 .formContainer p {
