--- a/src/components/CreateAccount/MainCA/MainCA.css
+++ b/src/components/CreateAccount/MainCA/MainCA.css
@@ -2,6 +2,9 @@
  * MainCA css File
 */
 
+.formCaContainer {
+    margin-top: -30px;
+}
 
 #btnContainer {
     height: 90px;
@@ -12,7 +15,7 @@
 }
 
 .caIcons {
-    margin: 10px;
+    margin: 20px 10px 0px 10px;
     padding: 10px;
     border: solid black 1px;
     border-radius: 24px;
