--- a/src/components/Foot/Foot.css
+++ b/src/components/Foot/Foot.css
@@ -8,5 +8,5 @@
     justify-content: center;
     align-items: center;
     align-content: center;
-    border: fuchsia dotted 1px;
+    /* border: fuchsia dotted 1px; */
 }
