--- a/src/components/Activities/MainAct/MainAct.css
+++ b/src/components/Activities/MainAct/MainAct.css
@@ -5,11 +5,18 @@
     display: none;
 }
 .labelContainer{
-    margin:0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    margin:10px;
     width: 100%;
-
+    border: red dotted 1px;
 }
-
+form label span {
+    margin-top: -15px;
+    font-family: 'Montserrat', sans-serif;
+}
 .formActContainer {
     margin-top: -20px;
     display: flex;
@@ -28,8 +35,8 @@
     width: 5%;
     margin: 6px 18px 6px 18px;
     padding: 10px;
-    min-width: 75px;
-    border: black solid 1px;
+    min-width: 40%;
+    /* border: black solid 1px; */
     border-radius: 20px;
  
 }
