--- a/src/components/AppBehavior/AppBehavior.css
+++ b/src/components/AppBehavior/AppBehavior.css
@@ -5,6 +5,15 @@
 .AppBehavior {
     /* propertys here */
 }
-.page {
-    
+#appBehaviorPage {
+    height: 667px;
+    padding-top: 30px;
+    background: rgba(0,53,117,1);
+  background: -moz-linear-gradient(top, rgba(0,53,117,1) 0%, rgba(0,145,235,1) 47%, rgba(51,197,255,1) 83%, rgba(87,224,255,1) 100%);
+  background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(0,53,117,1)), color-stop(47%, rgba(0,145,235,1)), color-stop(83%, rgba(51,197,255,1)), color-stop(100%, rgba(87,224,255,1)));
+  background: -webkit-linear-gradient(top, rgba(0,53,117,1) 0%, rgba(0,145,235,1) 47%, rgba(51,197,255,1) 83%, rgba(87,224,255,1) 100%);
+  background: -o-linear-gradient(top, rgba(0,53,117,1) 0%, rgba(0,145,235,1) 47%, rgba(51,197,255,1) 83%, rgba(87,224,255,1) 100%);
+  background: -ms-linear-gradient(top, rgba(0,53,117,1) 0%, rgba(0,145,235,1) 47%, rgba(51,197,255,1) 83%, rgba(87,224,255,1) 100%);
+  background: linear-gradient(to bottom, rgba(0,53,117,1) 0%, rgba(0,145,235,1) 47%, rgba(51,197,255,1) 83%, rgba(87,224,255,1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#003575', endColorstr='#57e0ff', GradientType=0 );
 }
