--- a/src/components/AppBehavior/MainAppBe/MainAppBe.css
+++ b/src/components/AppBehavior/MainAppBe/MainAppBe.css
@@ -1,10 +1,3 @@
-/*
- * MainAppBe css File
-*/
-
-.MainAppBe {
-    /* propertys here */
-}
 .formContainer {
     height: 394px;
     /* border: red dotted 1px; */
@@ -12,4 +5,9 @@
 }
 .formContainer p {
     font-size: 25px;
+    margin-top: 120px;
+}
+
+#appBehaviorNameInput {
+    margin-bottom: 60px;
 }
