--- a/src/components/CreateAccount/MainCA/MainCA.css
+++ b/src/components/CreateAccount/MainCA/MainCA.css
@@ -1,13 +1,17 @@
 /*
  * MainCA css File
 */
+#caForm {
+    border: red dotted 1px;
+    height: 220px;
+}
 
 .formCaContainer {
     margin-top: 55px;
 }
 
 #btnContainer {
-    height: 90px;
+    height: 100px;
     /* border: dotted red 1px; */
     display: flex;
     align-content: center;
@@ -17,7 +21,7 @@
 .caIcons {
     margin: 20px 10px 0px 10px;
     padding: 10px;
-    border: solid black 1px;
+    /* border: solid black 1px; */
     border-radius: 24px;
 }
 
