--- a/src/components/Activities/MainAct/MainAct.css
+++ b/src/components/Activities/MainAct/MainAct.css
@@ -1,6 +1,3 @@
-/*
- * MainAct css File
-*/
 .checkboxInput {
     display: none;
 }
@@ -10,36 +7,41 @@
     align-items: center;
     text-align: center;
     margin:10px;
-    width: 100%;
-    border: red dotted 1px;
+    width: 30%;
+    border: black solid 1px;
+    border-radius: 25px;
+    justify-content: center;
+    height: 80px;
 }
 form label span {
     margin-top: -15px;
     font-family: 'Montserrat', sans-serif;
 }
 .formActContainer {
-    margin-top: -20px;
+    margin-top: -50px;
     display: flex;
     flex-direction: row;
-    width: 100vw;
+    /* border: red dotted 1px; */
     flex-wrap: wrap;
 }
 .rowContainer{
     display:flex;
-    margin-right:10px;
-    padding:0;
-    width: 100vw;
-    height: 100%;
+    /* border: yellowgreen 1px dotted; */
+    margin: 0px 20px 0px 90px;
 }
 .formImage{
-    width: 5%;
+    width: 20%;
     margin: 6px 18px 6px 18px;
-    padding: 10px;
-    min-width: 40%;
+    padding: 5px;
+    min-width: 60%;
     /* border: black solid 1px; */
     border-radius: 20px;
  
 }
-.formImage img{
-    width: 50%;
+#educationalVideo, #meditation {
+    font-size: 13px;
+}
+#activitiesBtnContainer {
+    position: relative;
+    top: -30px;
 }
