--- a/src/components/Activities/MainAct/MainAct.css
+++ b/src/components/Activities/MainAct/MainAct.css
@@ -6,7 +6,7 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
-    margin:10px;
+    margin:20px 10px 0 10px;
     width: 30%;
     border: black solid 1px;
     border-radius: 25px;
@@ -30,10 +30,10 @@ form label span {
     margin: 0px 20px 0px 90px;
 }
 .formImage{
-    width: 20%;
+    width: 60%;
     margin: 6px 18px 6px 18px;
     padding: 5px;
-    min-width: 60%;
+    /* min-width: 60%; */
     /* border: black solid 1px; */
     border-radius: 20px;
  
@@ -44,4 +44,8 @@ form label span {
 #activitiesBtnContainer {
     position: relative;
     top: -30px;
+}
+#funnyImg, #movieImg {
+    min-width: 60%;
+    margin: 10px 30px 10px 30px;
 }
