--- a/src/components/AboutUs/MainAbUs/MainAbUs.css
+++ b/src/components/AboutUs/MainAbUs/MainAbUs.css
@@ -4,4 +4,50 @@
 
 #mainAbUsPage {
     margin-top: 180px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+.methodBtns {
+    width: 70%;
+    /* padding-top: 10px; */
+
+}
+#methodBtnOptions {
+
+    /* border: red dotted 1px; */
+    display: flex;
+    justify-content: center;
+    position: relative;
+    top: -110px;
+    width: 90%;
+}
+#pomodoroImg {
+    width: 65%;
+    padding-top: 5px;
+}
+#brealaxImg{
+    padding-top: 10px;
+}
+#customizeImg {
+    padding-top: 5px ;
+}
+.methodOptionCollumn {
+    margin: 0px 10px 0px 10px;
+    padding: 0px 10px 0px 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: black solid 2px;
+    height: 90px;
+    border-radius: 20px;
+    box-shadow: 5px 5px;
+}
+#methodSelectTxt {
+    position: relative;
+    top: -50px;
+}
+#abUsNextBtn {
+    position: relative;
+    top: -70px;
 }
