--- a/src/components/CreateAccount/MainCA/MainCA.css
+++ b/src/components/CreateAccount/MainCA/MainCA.css
@@ -6,7 +6,7 @@
 }
 
 .formCaContainer {
-    margin-top: 55px;
+    margin-top: -35px;
 }
 
 #btnContainer {
@@ -22,8 +22,13 @@
     padding: 10px;
     /* border: solid black 1px; */
     border-radius: 24px;
+    width: 28%;
 }
 
 .caInput {
     margin: 15px;
+}
+#formCaContainer form input {
+    position: relative;
+    top: -20px;
 }
