--- a/src/components/UserChoice/MainUC/MainUC.css
+++ b/src/components/UserChoice/MainUC/MainUC.css
@@ -14,14 +14,6 @@
 
 }
 
-#fakeImg {
-    margin-top: 80px;
-    height: 200px;
-    width:90%;
-    /* border: blue dotted 2px; */
-    border-radius: 20px;
-}
-
 .ucBtns {
     height: 80px;
     margin: 10px 20px;
@@ -30,6 +22,7 @@
     border-radius: 20px;
     position: relative;
     top: 50px;
+    box-shadow: 3px 3px;
 }
 .carousel-caption{
     position: relative;
@@ -37,12 +30,6 @@
 #ucTitleContainer{
     position: relative;
     top: 260px;
-}
-#ucImgTitle {
-    font-family: 'Montserrat', sans-serif;
-    font-size: 20px;
-    /* border: dotted red 1px; */
-    padding: 10px 20px 0px 10px;
 }
 
 #content {
@@ -67,7 +54,20 @@
     border: black solid 2px;
     border-radius: 20px;
 }
+.ucTitleContainer {
+    position: absolute;
+    border: black solid 1px;
+    top: 10px;
+    right: -10px;
+    background-color: rgb(97, 167, 232);
+    border-radius: 20px;
+}
 .ucTitle {
     position: relative;
-    color: red,
+    color: black;
+    padding: 0px 10px 0px 10px;
+    font-size: 15px;
+    font-weight: 900;
+    font-family: 'Montserrat', sans-serif;
+    top: 5px;
 }
