--- a/src/components/Activities/MainAct/MainAct.css
+++ b/src/components/Activities/MainAct/MainAct.css
@@ -13,6 +13,16 @@
     justify-content: center;
     height: 80px;
 }
+
+
+/*
+.checkboxInput input[type="checkbox"]:checked + label {
+    border: red solid 1px;
+}
+.onlinecheckbox input[type="checkbox"]:checked + label {
+    border: yellowgreen solid 5px;
+} */
+
 form label span {
     margin-top: -15px;
     font-family: 'Montserrat', sans-serif;
