--- a/src/components/AppBehavior/MainAppBe/MainAppBe.css
+++ b/src/components/AppBehavior/MainAppBe/MainAppBe.css
@@ -11,3 +11,8 @@
 #appBehaviorNameInput {
     margin-bottom: 60px;
 }
+#appBehaviorNextBtnContainer {
+    position: absolute;
+    top: 375px;
+    right: 150px;
+}
