--- a/src/components/CreateAccount/MainCA/MainCA.css
+++ b/src/components/CreateAccount/MainCA/MainCA.css
@@ -42,7 +42,7 @@
 #passwordContainer{
     margin-top: -20px;
 }
-#caNextBtn {
+#caNextBtnContainer {
     position: relative;
-    top: -80px;
+    top: -30px;
 }
