--- a/src/components/UserChoice/MainUC/MainUC.css
+++ b/src/components/UserChoice/MainUC/MainUC.css
@@ -14,7 +14,7 @@
 
 }
 
-.ucBtns {
+/* .ucBtns {
     height: 80px;
     margin: 10px 20px;
     padding: 10px;
@@ -23,7 +23,7 @@
     position: relative;
     top: 50px;
     box-shadow: 3px 3px;
-}
+} */
 .carousel-caption{
     position: relative;
 }
@@ -49,22 +49,22 @@
     /* border: red dotted 1px; */
     height: 450px;
 }
-.carouselImg {
+/* .carouselImg {
     width: 80%;
     border: black solid 2px;
     border-radius: 20px;
-}
+} */
 .ucTitleContainer {
     position: absolute;
     border: black solid 1px;
     top: 10px;
     right: -10px;
-    background-color: rgb(97, 167, 232);
-    border-radius: 20px;
+    background-color: black;
+    border-radius: 5px;
 }
 .ucTitle {
     position: relative;
-    color: black;
+    color: white;
     padding: 0px 10px 0px 10px;
     font-size: 15px;
     font-weight: 900;
