--- a/src/components/UserChoice/MainUC/ImageSlider/ImageSlider.css
+++ b/src/components/UserChoice/MainUC/ImageSlider/ImageSlider.css
@@ -16,28 +16,27 @@
     margin-top: 20px;
 }
 #imgSliderImg {
-    margin-top: 70px;
+    display: relative;
+    margin-top: -80px;
     width: 85%;
     border: black solid 2px;
     border-radius: 5px;
-}
-.imgSliderBtns {
-    height: 100px;
-    width: 100px;
 }
 .ucLikeBtns {
     width: 40%;
 }
 #likeBtnsContainer {
     display: flex;
-    margin-top: 10px;
+    position: absolute;
+    top: 500px;
+    /* margin-top: 10px; */
     justify-content: space-between;
     align-items: center;
     /* border: dotted red 2px; */
     width: 60%;
-    height: 80px;
+    height: 100px;
 }
 #dislikeBtn {
     position: relative;
-    top: 5px;
+    top: 20px;
 }
