--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
+form input{
+  height: 40px;
+  width: 50%;
+  font-size: 20px;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: bold;
+}
+
 .pageText{
   font-family: 'Montserrat', sans-serif;
   font-size: 20px;
