--- a/src/components/Activities/MainAct/MainAct.css
+++ b/src/components/Activities/MainAct/MainAct.css
@@ -8,7 +8,7 @@
     text-align: center;
     margin:20px 10px 0 10px;
     width: 30%;
-    border: black solid 1px;
+    border: black solid 2px;
     border-radius: 25px;
     justify-content: center;
     height: 80px;
@@ -17,6 +17,7 @@
 form label span {
     margin-top: -15px;
     font-family: 'Montserrat', sans-serif;
+    padding: 3px;
 }
 #formActContainer {
     margin-top: -70px;
@@ -33,14 +34,14 @@ form label span {
 .formImage{
     width: 80%;
     margin: -2px 18px 6px 18px;
-    padding: 2px;
+    padding: 4px;
     /* min-width: 60%; */
     /* border: black solid 1px; */
     border-radius: 20px;
- 
+    pointer-events: none;
 }
 #educationalVideo, #meditation {
-    font-size: 13px;
+    font-size: 12px;
 }
 #activitiesBtnContainer {
     position: relative;
@@ -48,5 +49,6 @@ form label span {
 }
 #funnyImg, #movieImg {
     min-width: 60%;
-    margin: 2px 30px 10px 30px;
+    margin: 5px 30px 10px 30px;
 }
+
