--- a/src/components/PrincipalPage/MainPP/MainPP.css
+++ b/src/components/PrincipalPage/MainPP/MainPP.css
@@ -1,26 +1,27 @@
 
 #progressBarContainer {
-    border: purple 3px dotted;
+    /* border: purple 3px dotted; */
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
     position: absolute;
-    margin-top: 150px;
+    top: 280px;
+    /* margin-top: 150px; */
 }
 #progressBar {
     top: -110px;
     border: black 2px solid;
     box-shadow: 3px 3px;
-    width: 90%;
+    width: 100%;
     height: 40px;
     border-radius: 20px;
     padding: 10px;
     margin: 10px;
 }
 #ppBtnContainer {
-    border: yellowgreen dotted 5px;
-    position: relative;
+    /* border: yellowgreen dotted 5px; */
+    position: absolute;
     top: 200px;
     left: -60px;
     display: none;
@@ -29,7 +30,7 @@
     position: absolute;
     display: flex;
     justify-content: space-between;
-    top: 15px;
+    top: 130px;
     /* border: red dotted 2px; */
     margin: 5px;
     width: 98%;
@@ -51,9 +52,10 @@
 #segmentContainer{
     display: flex;
     position: absolute;
+    top: 11px;
     height: 100px;
-    width: 100%;
-    border: 2px dotted red;
+    width: 70%;
+    /* border: 2px dotted red; */
     justify-content: space-between;
 }
 #lunch{
@@ -72,9 +74,16 @@
     display: flex;
     position: relative;
     top: -200px;
-    width: 90%;
-    height: 500px;
+    width: 100%;
+    height: 100px;
     justify-content: space-between;
-    /* margin: 0px 50px 0px 50px; */
-    border: yellowgreen dotted 2px;
+    margin: 0px 20px 0px 0px;
+    /* border: yellowgreen dotted 2px; */
+}
+#startBtn {
+    position: relative;
+    top: -100px;
+    width: 50%;
+    height: 180px;
+    left: 90px;
 }
