--- a/src/components/PrincipalPage/AlertModal/AlertModal.css
+++ b/src/components/PrincipalPage/AlertModal/AlertModal.css
@@ -16,12 +16,35 @@
     justify-content: center;
     align-items: center;
 }
-#alertModalPageContainer {
-    /* display: flex;
-    justify-content: center;
-    text-align: center;
-    align-items: center; */
-}
 .emojiText {
     font-family: 'Montserrat', sans-serif;
+}
+#movieContainer{
+    height:400px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+}
+
+#modalMovie {
+    height: 300px;
+}
+.doYouLikeIcons {
+    width: 30%;
+    height: 60px;
+}
+#modalLikeBtnsContainer {
+    width: 60%;
+    height: 50px;
+    display: flex;
+    justify-content: space-around;
+    /* border: red dotted 2px; */
+    
+}
+#doYouLike {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
