--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,11 @@
 form input{
-  height: 40px;
+  height: 30px;
   width: 50%;
+  padding: 20px;
   font-size: 20px;
   font-family: 'Montserrat', sans-serif;
   font-weight: bold;
+  box-shadow: 3px 3px #003575;
 }
 
 .pageText{
