--- a/src/components/UserChoice/MainUC/MainUC.css
+++ b/src/components/UserChoice/MainUC/MainUC.css
@@ -13,17 +13,6 @@
     height: 354px;
 
 }
-
-/* .ucBtns {
-    height: 80px;
-    margin: 10px 20px;
-    padding: 10px;
-    border: black solid 1px;
-    border-radius: 20px;
-    position: relative;
-    top: 50px;
-    box-shadow: 3px 3px;
-} */
 .carousel-caption{
     position: relative;
 }
@@ -49,14 +38,10 @@
     /* border: red dotted 1px; */
     height: 450px;
 }
-/* .carouselImg {
-    width: 80%;
-    border: black solid 2px;
-    border-radius: 20px;
-} */
+
 .ucTitleContainer {
     position: absolute;
-    border: black solid 1px;
+    border: #003575 solid 1px;
     top: 10px;
     right: -10px;
     background-color: black;
