--- a/src/components/PrincipalPage/AlertModal/AlertModal.css
+++ b/src/components/PrincipalPage/AlertModal/AlertModal.css
@@ -48,3 +48,18 @@
     flex-direction: column;
     align-items: center;
 }
+#modalTitle{
+    color: #003575;
+    font-size: 25px;
+    font-weight: bold; 
+}
+#emojiQuestionText, .emojiText{
+    color: #003575;
+    font-size: 20px;
+    font-weight: bold; 
+}
+#ucVideoText {
+    color: #003575;
+    font-size: 25px;
+    font-weight: bold; 
+} 
