--- a/src/components/PrincipalPage/PrincipalPage.css
+++ b/src/components/PrincipalPage/PrincipalPage.css
@@ -14,3 +14,6 @@
   background: linear-gradient(to bottom, rgba(0,53,117,1) 0%, rgba(0,145,235,1) 47%, rgba(51,197,255,1) 83%, rgba(87,224,255,1) 100%);
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#003575', endColorstr='#57e0ff', GradientType=0 );
 }
+h1 {
+  color: #57e0ff
+}
