--- a/src/components/UserChoice/MainUC/ImageSlider/ImageSlider.css
+++ b/src/components/UserChoice/MainUC/ImageSlider/ImageSlider.css
@@ -14,6 +14,8 @@
     font-family: 'Montserrat', sans-serif;
     font-size: 30px;
     margin-top: 20px;
+    font-weight: bold;
+    color: #003575;
 }
 #imgSliderImg {
     display: relative;
